feat responsive sidenav and logo padding-left

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -5,10 +5,10 @@
         </div>
 
         <ul class="menu-items">
-            <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active">
+            <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active" (click)="drawer.toggle()">
                 # welcome
             </li>
-            <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/chat/', channel.customIdName)">
+            <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/chat/', channel.customIdName); drawer.toggle()">
                 #{{ channel.channelName }}
             </li>
             <li (click)="openDialog()">
