--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,40 +1,30 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
-  <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-    <div class="logo-container" (click)="drawer.toggle()">
-      <img class="logo" src="./../../assets/images/logo.svg" alt="" />
-    </div>
+    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+        <div class="logo-container" (click)="drawer.toggle()">
+            <img class="logo" src="./../../assets/images/logo.svg" alt="" />
+        </div>
 
-    <ul class="menu-items">
-      <li
-        [routerLink]="['/chat/welcome']"
-        routerLinkActive="router-link-active"
-      >
-        # welcome
-      </li>
-      <li
-        *ngFor="let channel of this.firestoreService.allChannels"
-        (click)="openChat('/chat/', channel.customIdName)"
-      >
-        #{{ channel.channelName }}
-      </li>
-      <li (click)="openDialog()"><mat-icon>add</mat-icon>Create New-Chat</li>
+        <ul class="menu-items">
+            <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active">
+                # welcome
+            </li>
+            <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/chat/', channel.customIdName)">
+                #{{ channel.channelName }}
+            </li>
+            <li (click)="openDialog()">
+                <mat-icon>add</mat-icon>Create New-Chat</li>
 
-      <ul class="menu-items">
-        Users
-        <li>User 1</li>
-        <li
-          *ngFor="let user of this.firestoreService.allUsers"
-          (click)="openDirectMessage('/chat/dm/', user.uid)"
-        >
-          {{ user.displayName }}
-        </li>
-      </ul>
-      <li (click)="this.authService.logOut()">
-        <mat-icon>logout</mat-icon>Log Out
-      </li>
-    </ul>
-    <a class="legal-notice-link" routerLink="/legal-notice"
-      >Imprint <span>|</span> Privacy Policy</a
+            <ul class="menu-items">
+                Users
+                <li *ngFor="let user of this.firestoreService.allUsers" (click)="openDirectMessage('/chat/dm/', user.uid)">
+                    {{ user.displayName }}
+                </li>
+            </ul>
+            <li (click)="this.authService.logOut()">
+                <mat-icon>logout</mat-icon>Log Out
+            </li>
+        </ul>
+        <a class="legal-notice-link" routerLink="/legal-notice">Imprint <span>|</span> Privacy Policy</a
     >
   </mat-drawer>
 
@@ -69,11 +59,11 @@
             />
           </a>
         </div>
-      </mat-toolbar-row>
-    </mat-toolbar>
+        </mat-toolbar-row>
+        </mat-toolbar>
 
-    <div class="router-container">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+        <div class="router-container">
+            <router-outlet></router-outlet>
+        </div>
+        </div>
 </mat-drawer-container>
