replace allUsers with allOtherUsers method and variable

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -16,7 +16,7 @@
 
             <ul class="menu-items">
                 Users
-                <li *ngFor="let user of this.firestoreService.allUsers" (click)="openDirectMessage('/chat/dm/', user.uid)">
+                <li *ngFor="let user of this.firestoreService.allOtherUsers" (click)="openDirectMessage('/chat/dm/', user.uid)">
                     {{ user.displayName }}
                 </li>
             </ul>
