--- a/src/app/direct-message/direct-message.component.html
+++ b/src/app/direct-message/direct-message.component.html
@@ -1,41 +1,30 @@
 <div class="chatroom">
-  <h2>{{ this.firestoreService.channel.channelName }}</h2>
+    <h2>{{ this.firestoreService.channel.channelName }}</h2>
 
-  <div class="massages" id="messageBox">
-    <mat-card class="message">
-      <div class="post-headline">
-        <img class="profile" src="" alt="" /> displayName
+    <div class="massages" id="messageBox">
+        <mat-card class="message">
+            <div class="post-headline">
+                <img class="profile" src="" alt="" /> displayName
 
-        <button
-          mat-icon-button
-          class="pin-right-upper-corner"
-          [matMenuTriggerFor]="userMenu"
-        >
+                <button mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
           <mat-icon>more_vert</mat-icon>
         </button>
-        <mat-menu #userMenu="matMenu">
-          <button mat-menu-item>Edit</button>
-          <button mat-menu-item>Delete</button>
-        </mat-menu>
-      </div>
-      <div>message</div>
-    </mat-card>
-  </div>
+                <mat-menu #userMenu="matMenu">
+                    <button mat-menu-item>Edit</button>
+                    <button mat-menu-item>Delete</button>
+                </mat-menu>
+            </div>
+            <div>message</div>
+        </mat-card>
+    </div>
 
-  <div class="message-container">
-    <mat-form-field appearance="fill">
-      <mat-label>Your Message</mat-label>
-      <textarea
-        [(ngModel)]="this.firestoreService.dmInput"
-        matInput
-        cdkTextareaAutosize
-        #autosize="cdkTextareaAutosize"
-        cdkAutosizeMinRows="5"
-        cdkAutosizeMaxRows="10"
-      ></textarea>
-    </mat-form-field>
-    <button mat-raised-button (click)="this.firestoreService.createDmChat()">
+    <div class="message-container">
+        <mat-form-field appearance="fill">
+            <mat-label>Your Message</mat-label>
+            <textarea [(ngModel)]="this.firestoreService.dmInput" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
+        </mat-form-field>
+        <button mat-raised-button (click)="this.firestoreService.postDirectMessage()">
       Post
     </button>
-  </div>
+    </div>
 </div>
