--- a/src/app/direct-message/direct-message.component.html
+++ b/src/app/direct-message/direct-message.component.html
@@ -1,5 +1,5 @@
 <div class="chatroom">
-    <h2>{{ this.firestoreService.channel.channelName }}</h2>
+    <h2>{{ this.firestoreService.participantUserName}}</h2>
 
     <div class="massages" id="messageBox">
         <mat-card class="message">
