fix edit-message 2

--- a/src/app/dialog-edit-message/dialog-edit-message.component.html
+++ b/src/app/dialog-edit-message/dialog-edit-message.component.html
@@ -2,4 +2,4 @@
     <mat-label>Edit your message</mat-label>
     <textarea [(ngModel)]="this.firestoreService.currentMessage.message" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
 </mat-form-field>
-<button mat-raised-button (click)="this.firestoreService.saveMessage();this.dialogRef.close()">Save</button>
+<button mat-raised-button (click)="this.firestoreService.deleteAllMessagesOfChat(); this.firestoreService.saveMessage(); this.dialogRef.close()">Save</button>
