fix routerLink at get-started-component => /chat/welcome

--- a/src/app/get-started/get-started.component.html
+++ b/src/app/get-started/get-started.component.html
@@ -13,7 +13,7 @@
         Sign Up
       </button>
             <div *ngIf="afAuth.user | async">
-                <p>You are already loged in <a routerLink="/chat"> Go to Chat </a></p>
+                <p>You are already loged in <a routerLink="/chat/welcome"> Go to Chat </a></p>
             </div>
         </div>
     </div>
