feat/ delete and edit function for DM 2

--- a/src/app/direct-message/direct-message.component.html
+++ b/src/app/direct-message/direct-message.component.html
@@ -6,12 +6,12 @@
                 <img class="profile" src="{{ message.photoURL }}" alt="{{ message.displayName }}" />
                 <span>{{ message.displayName }}</span>
 
-                <button mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
+                <button *ngIf="message.uid == this.authService.userData.uid" mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
           <mat-icon>more_vert</mat-icon>
         </button>
                 <mat-menu #userMenu="matMenu">
-                    <button mat-menu-item (click)="this.dialogEditMessage(message)">Edit</button>
-                    <button mat-menu-item (click)="this.dialogDeleteMessage(message)">Delete</button>
+                    <button mat-menu-item (click)="this.dialogEditMessageDM(message)">Edit</button>
+                    <button mat-menu-item (click)="this.dialogDeleteMessageDM(message)">Delete</button>
                 </mat-menu>
             </div>
             <div>{{ message.message }}</div>
