--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,7 +1,8 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
     <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
         <div class="logo-container" (click)="drawer.toggle()">
-            <img class="logo" src="./../../assets/images/logo.svg" alt="" />
+            <img class="logo" src="./../../assets/images/logo.svg" alt="Logo" />
+            <span class="headline">Slack Clone</span>
         </div>
 
         <ul class="menu-items">
@@ -33,9 +34,8 @@
       <mat-toolbar-row>
         <div class="header-left">
           <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-          <img class="logo" src="./../../assets/images/logo.svg" alt="" />
-
-          <span class="headline">Slack Clone</span>
+          <!-- <img class="logo" src="./../../assets/images/logo.svg" alt="" />
+          <span class="headline">Slack Clone</span> -->
           <input
             class="search_field hide_mobile"
             type="text"
