--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -6,21 +6,31 @@
         </div>
 
         <ul class="menu-items">
-            <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active" (click)="drawer.toggle()">
-                # welcome
-            </li>
-            <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/chat/', channel.customIdName); drawer.toggle()">
-                #{{ channel.channelName }}
-            </li>
-            <li (click)="openDialog()">
-                <mat-icon>add</mat-icon>Create New-Chat</li>
+            <details open>
+                <summary>Channels</summary>
+                <ul>
+                    <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active" (click)="drawer.toggle()">
+                        <span># welcome</span>
+                    </li>
+                    <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/chat/', channel.customIdName); drawer.toggle()">
+                        <span>#{{ channel.channelName }}</span>
+                    </li>
+                    <li (click)="openDialog()">
+                        <mat-icon>add</mat-icon>
+                        <span>Create new channel</span>
+                    </li>
+                </ul>
+            </details>
 
-            <ul class="menu-items">
-                Users
-                <li *ngFor="let user of this.firestoreService.allOtherUsers" (click)="openDirectMessage('/chat/dm/', user.uid)">
-                    {{ user.displayName }}
-                </li>
-            </ul>
+            <details open>
+                <summary>Users</summary>
+                <ul class="menu-items">
+                    <li *ngFor="let user of this.firestoreService.allOtherUsers" (click)="openDirectMessage('/chat/dm/', user.uid)">
+                        <span>{{ user.displayName }}</span>
+                    </li>
+                </ul>
+            </details>
+
             <li (click)="this.authService.logOut()">
                 <mat-icon>logout</mat-icon>Log Out
             </li>
@@ -34,8 +44,6 @@
       <mat-toolbar-row>
         <div class="header-left">
           <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-          <!-- <img class="logo" src="./../../assets/images/logo.svg" alt="" />
-          <span class="headline">Slack Clone</span> -->
           <input
             class="search_field hide_mobile"
             type="text"
