--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -49,18 +49,20 @@ mat-toolbar-row {
 }
 
 .menu-items {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
     list-style-type: none;
-    padding: 0;
+    padding: 0 0 0 16px;
     margin: 16px 0 32px 16px;
     li {
-        padding-left: 16px;
         padding-right: 16px;
         height: 30px;
         display: flex;
         align-items: center;
         cursor: pointer;
         mat-icon {
-            margin-right: 16px;
+            margin-right: 4px;
         }
         &:hover {
             background-color: rgba($color: #000000, $alpha: 0.1);
@@ -69,6 +71,10 @@ mat-toolbar-row {
             outline: none;
         }
     }
+}
+
+summary {
+    cursor: pointer;
 }
 
 .logout {
