--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -16,23 +16,17 @@
                 <mat-label>Password</mat-label>
                 <input type="password" matInput #userPwd required type="password" formControlName="password" />
             </mat-form-field>
-            <button class="width-25vw" mat-raised-button color="login-button" (click)="onSubmit()">
-        Sign Up
-      </button>
+            <button class="width-25vw primary-btn" mat-raised-button (click)="onSubmit()">Sign Up</button>
         </form>
 
         <p>OR</p>
         <div>
-            <button class="width-25vw google-login" mat-stroked-button id="googleLogin" (click)="authService.googleAuth()">
-        <img class="google-icon" src="assets/images/googleicon.png" alt="" />
-        Continue with Google
-      </button>
+            <button class="width-25vw google-login" mat-stroked-button id="googleLogin" (click)="authService.googleAuth()"><img class="google-icon" src="assets/images/googleicon.png" alt="Google Icon" />Continue with Google</button>
         </div>
         <div class="to-sign-in">
             <p>Already using Slack-Clone?</p>
-            <a (click)="this.utils.redirectToLogin()" [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign in to an existing worksapce</a
-      >
-    </div>
-  </div>
-  <a class="legal-notice-link" routerLink="/legal-notice">Imprint <span>|</span> Privacy Policy</a>
+            <a (click)="this.utils.redirectToLogin()" [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign in to an existing worksapce</a>
         </div>
+    </div>
+    <a class="legal-notice-link" routerLink="/legal-notice">Imprint <span>|</span> Privacy Policy</a>
+</div>
