--- a/src/app/dialog-guest-user/dialog-guest-user.component.scss
+++ b/src/app/dialog-guest-user/dialog-guest-user.component.scss
@@ -1,8 +1,4 @@
-.mat-login-button {
-    background-color: #4a154b;
-    color: white;
-    margin-right: 10px;
-    &:hover {
-        background-color: #611f69e6;
-    }
+.form-actions {
+    display: flex;
+    justify-content: flex-end;
 }
