--- a/src/app/get-started/get-started.component.html
+++ b/src/app/get-started/get-started.component.html
@@ -9,9 +9,7 @@
             <h1>Bring's your the team together. <br />Wherever you are.</h1>
         </div>
         <div class="left-botom">
-            <button mat-raised-button color="primary" routerLink="/sign-up" color="signup-button">
-        Sign Up
-      </button>
+            <button class="width-25vw secondary-btn" mat-raised-button routerLink="/sign-up" color="signup-button">Sign Up</button>
             <div *ngIf="afAuth.user | async">
                 <p>You are already loged in <a routerLink="/chat/welcome"> Go to Chat </a></p>
             </div>
