style improvements to forgot-password dialog

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,25 +1,14 @@
 <h2>Reset Password</h2>
 <p class="text-center">
-  Please enter your email address to request a password reset.
+    Please enter your email address to request a password reset.
 </p>
 
-<form action="" onsubmit="return false;">
-  <mat-form-field appearance="outline">
-    <mat-label>Email</mat-label>
-    <input
-      type="email"
-      matInput
-      #passwordResetEmail
-      required
-    /> </mat-form-field
-  ><br />
-  <button
-    color="loginbutton"
-    (click)="this.authService.forgotPassword(passwordResetEmail.value)"
-    type="submit"
-    mat-raised-button
-  >
-    Reset Password
-  </button>
-  <a (click)="this.dialog.close()">Go back to login</a>
+<form onsubmit="return false;">
+    <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput #passwordResetEmail required /> </mat-form-field><br />
+    <div class="form-actions">
+        <button class="primary-btn" (click)="this.authService.forgotPassword(passwordResetEmail.value)" type="submit" mat-raised-button>Reset Password</button>
+        <button (click)="this.dialog.close()" mat-raised-button>Close</button>
+    </div>
 </form>
