--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -1,14 +1,5 @@
-a {
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.mat-loginbutton {
-    background-color: #4a154b;
-    color: white;
-    margin-right: 10px;
-
-    &:hover {
-        background-color: #611f69e6;
-    }
+.form-actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 8px
 }
