--- a/src/app/dialog-forgot-password/dialog-forgot-password.component.html
+++ b/src/app/dialog-forgot-password/dialog-forgot-password.component.html
@@ -3,12 +3,12 @@
     Please enter your email address to request a password reset.
 </p>
 
-<form onsubmit="return false;">
+<form [formGroup]="resetPasswordForm" (submit)="this.onSubmit()" ngNativeValidate>
     <mat-form-field appearance="outline">
         <mat-label>Email</mat-label>
-        <input type="email" matInput #passwordResetEmail required /> </mat-form-field><br />
+        <input type="email" matInput #passwordResetEmail formControlName="email" required /> </mat-form-field><br />
     <div class="form-actions">
-        <button class="primary-btn" (click)="this.authService.forgotPassword(passwordResetEmail.value)" type="submit" mat-raised-button>Reset Password</button>
+        <button class="primary-btn" type="submit" mat-raised-button>Reset Password</button>
         <button (click)="this.dialog.close()" mat-raised-button>Close</button>
     </div>
 </form>
