search function works part1

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -53,6 +53,7 @@
               placeholder="search"
               matInput
               [formControl]="searchFormControl"
+              [matAutocomplete]="auto"
               autocomplete="on"
               class="search_field hide_mobile"
             />
