--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -9,10 +9,10 @@
             <details open>
                 <summary>Channels</summary>
                 <ul>
-                    <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active" (click)="drawer.toggle()">
+                    <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active" (click)="this.toggleNav()">
                         <span># welcome</span>
                     </li>
-                    <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/chat/', channel.customIdName); drawer.toggle()">
+                    <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/chat/', channel.customIdName); this.toggleNav()">
                         <span>#{{ channel.channelName }}</span>
                     </li>
                     <li (click)="openDialog()">
