refactor edit-messages dialogs

--- a/src/app/dialog-edit-message/dialog-edit-message.component.html
+++ b/src/app/dialog-edit-message/dialog-edit-message.component.html
@@ -1,5 +1,10 @@
-<mat-form-field appearance="fill">
-    <mat-label>Edit your message</mat-label>
-    <textarea [(ngModel)]="this.firestoreService.currentMessage.message" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
-</mat-form-field>
-<button mat-raised-button (click)="this.firestoreService.deleteAllMessagesOfChat(); this.firestoreService.saveMessage(); this.dialogRef.close()">Save</button>
+<h1 mat-dialog-title>Edit your message</h1>
+<div mat-dialog-content>
+    <mat-form-field appearance="fill">
+        <mat-label>Edit your message</mat-label>
+        <textarea [(ngModel)]="this.firestoreService.currentMessage.message" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
+    </mat-form-field>
+</div>
+<div mat-dialog-actions>
+    <button class="primary-btn" mat-raised-button (click)="this.firestoreService.deleteAllMessagesOfChat(); this.firestoreService.saveMessage(); this.dialogRef.close()">Save</button>
+</div>
