--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -2,7 +2,7 @@
     <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
         <div class="logo-container" (click)="drawer.toggle()">
             <img class="logo" src="./../../assets/images/logo.svg" alt="Logo" />
-            <span class="headline">Slack Clone</span>
+            <span>Slack Clone</span>
         </div>
 
         <ul class="menu-items">
