--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -27,7 +27,7 @@
             <mat-label>Your Message</mat-label>
             <textarea formControlName="message" minlength="1" #messageInput matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
         </mat-form-field>
-        <button *ngIf="messageInput.value != ''" type="submit" mat-raised-button>Post</button>
+        <button [disabled]="messageInput.value == ''" [ngClass]="{'primary-btn' : messageInput.value != ''}" type="submit" mat-raised-button>Post</button>
     </form>
 
 </div>
