--- a/src/app/direct-message/direct-message.component.html
+++ b/src/app/direct-message/direct-message.component.html
@@ -1,6 +1,10 @@
 <div class="chatroom">
     <h2>{{ this.firestoreService.participantUserName }}</h2>
     <div #scrollContainer *ngIf="this.firestoreService.directChatMessages" class="massages" id="messageBox">
+        <div *ngIf="this.firestoreService.directChatMessages.length == 0" class="no-messages-container">
+            <i style="color: var(--primary-col)" class="material-icons">error</i>
+            <h2>Here are no messages yet.</h2>
+        </div>
         <mat-card class="message" *ngFor="let message of this.firestoreService.directChatMessages">
             <div class="post-headline">
                 <img class="profile" src="{{ message.photoURL }}" alt="{{ message.displayName }}" />
